--- a/src/Css/Home.css
+++ b/src/Css/Home.css
@@ -5,7 +5,7 @@
     grid-template-columns: 1fr 2fr 1fr;
     grid-template-rows: 1fr 8fr 1fr;
     grid-template-areas:
-        "header header header"
+        "userList header header"
         "userList chatScreen friendRequest"
         "footer footer footer"
 }
